--- a/product_item.html
+++ b/product_item.html
@@ -371,265 +371,14 @@
                 </div>
             </div>
         </section>
-
-
-<!--        <section class="pdp-section product-specs " id="prodDescCont">
-            <div class="comp comp-product-specs reset-padding" id="productSpecs">
-                <div class="tabs clearfix">
-                    <ul>
-                        <li class="desc-tab tab activeTab active"><a href="javascript: void(0)">Item Details</a></li>
-                        <li class="desc-tab tab ratingTab"><a href="javascript: void(0)">Ratings &amp; Reviews</a></li>
-                        <li class="desc-tab tab qnaTab"><a href="javascript: void(0)">Questions &amp; Answers</a></li>
-                    </ul>
-                </div>   
-
-                <div id="id-tab-container" class="tab-container">
-                    <div class="tab-content activeTab">
-
-                        <div class="spec-section expanded highlightsTileContent">
-                            <div class="spec-title-wrp">
-                                <h3 class="spec-title">
-                                    <i class="sd-icon sd-icon-plus "></i>
-                                    <i class="sd-icon sd-icon-minus"></i>
-                                    <span class="headTitle">Highlights</span>
-                                </h3>
-                            </div>
-                            <div class="spec-body p-keyfeatures">
-                                <ul class="dtls-list clear">
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Samsung</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Type:In Ear</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Wired or Wireless:Wired</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">With or Without Mic:With Mic</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Jack Diameter (in mm):3.5</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Tangle Free Cord:Yes</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Noise Cancellation:Yes</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">Colour:White</span>
-                                    </li>
-                                    <li class="col-xs-8 dtls-li" id="highlightSupc">
-                                        <span class="list-cicrle-cont"><span class="list-circle"></span></span>
-                                        <span class="h-content">SUPC: SDL356676002</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="spec-section expanded">
-                            <div class="spec-title-wrp">
-                                <h3 class="spec-title">
-                                    <i class="sd-icon sd-icon-plus "></i>
-                                    <i class="sd-icon sd-icon-minus"></i>
-                                    <span class="headTitle">Specifications</span>
-                                </h3>
-                            </div>
-                            <div class="spec-body specifications">
-                                <div class="detailssubbox">
-                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                        <tbody><tr><td>
-                                            <table width="100%" border="0" cellspacing="2" cellpadding="0" class="product-spec">
-                                                <tbody><tr><th colspan="2">In the Box</th></tr>
-                                                    <tr>
-                                                        <td width="20%">Box Contents</td>
-                                                        <td>1 Earphone  </td>
-                                                    </tr>
-                                                </tbody></table>
-                                            </td></tr>
-                                            <tr><td>
-                                                <table width="100%" border="0" cellspacing="2" cellpadding="0" class="product-spec">
-                                                    <tbody><tr><th colspan="2">General</th></tr>
-                                                        <tr>
-                                                            <td width="20%">Brand</td>
-                                                            <td>Samsung  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Earphones Model Name</td>
-                                                            <td>Samsung j7 (2017)/S  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Type</td>
-                                                            <td>In Ear  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Colour</td>
-                                                            <td>White  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">With or Without Mic</td>
-                                                            <td>With Mic  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Wired or Wireless</td>
-                                                            <td>Wired  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Bluetooth</td>
-                                                            <td>No  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">WiFi</td>
-                                                            <td>No  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Noise Cancellation</td>
-                                                            <td>Yes  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Compatibility</td>
-                                                            <td>All  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Smart Switch</td>
-                                                            <td>Yes  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Tangle Free Cord</td>
-                                                            <td>Yes  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Gold Plated Connector</td>
-                                                            <td>Yes  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">L shape Connector</td>
-                                                            <td>No  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Additional Features</td>
-                                                            <td>High Quality Voice  </td>
-                                                        </tr>
-                                                    </tbody></table>
-                                                </td></tr>
-                                            <tr><td>
-                                                <table width="100%" border="0" cellspacing="2" cellpadding="0" class="product-spec">
-                                                    <tbody><tr><th colspan="2">Technical Details</th></tr>
-                                                        <tr>
-                                                            <td width="20%">Impedence(Ohm)</td>
-                                                            <td>200Ohm  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Driver Size(in mm)</td>
-                                                            <td>3  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Jack Diameter (in mm)</td>
-                                                            <td>3.5  </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="20%">Cord Length (in cm)</td>
-                                                            <td>1.3m  </td>
-                                                        </tr>
-                                                    </tbody></table>
-                                                </td></tr>
-                                            <tr><td>
-                                                <table width="100%" border="0" cellspacing="2" cellpadding="0" class="product-spec">
-                                                    <tbody><tr><th colspan="2">Product Dimensions</th></tr>
-                                                        <tr>
-                                                            <td width="20%">Product Weight(in gm)</td>
-                                                            <td>25  </td>
-                                                        </tr>
-                                                    </tbody></table>
-                                                </td></tr>
-                                            <tr><td>
-                                                <table width="100%" border="0" cellspacing="2" cellpadding="0" class="product-spec">
-                                                    <tbody><tr><th colspan="2">Warranty</th></tr>
-                                                        <tr>
-                                                            <td width="20%">Warranty</td>
-                                                            <td>6 Years  </td>
-                                                        </tr>
-                                                    </tbody></table>
-                                                </td></tr>
-                                        </tbody></table></div>
-                            </div>
-                        </div>
-                        <div class="spec-section expanded">
-                            <div class="spec-title-wrp">
-                                <h3 class="spec-title">
-                                    <i class="sd-icon sd-icon-plus "></i>
-                                    <i class="sd-icon sd-icon-minus"></i>
-                                    <span class="headTitle">Description</span>
-                                </h3>
-                            </div>
-                            <div class="spec-body">
-                                <div itemprop="description" class="detailssubbox">
-                                    <p>
-                                        Earphones For SAMSUNG, Mi, NOKIA, LUMIA, SONY, All Andriod IOS,Windows,PC, Camera,and All devices Which 3.5m Jack Supported</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="spec-section expanded">
-                            <div class="spec-title-wrp">
-                                <h3 class="spec-title">
-                                    <i class="sd-icon sd-icon-plus "></i>
-                                    <i class="sd-icon sd-icon-minus"></i>
-                                    <span class="headTitle">Terms &amp; Conditions</span>
-                                </h3>
-                            </div>
-                            <div class="spec-body">
-                                <div class="detailssubbox">
-                                    <p>The images represent actual product though color of the image and product may slightly differ.</p>
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div></div>
-            <div class="comp-feedback-form clearfix js-feedback-form">
-                <div class="feedback-form">
-                    <div class="lfloat ">
-                        <span class="feedback-txt">Was this information helpful to you? </span>
-                        <span class="btn-yes js-yesFeedback">Yes</span> 
-                        <span class="btn-no js-noFeedback">No</span>
-                    </div>
-                    <div class="feed-comment-sec">
-                        <div class="themeDropDown hidden feebdack-dropdown">
-                            <div class="themeSelect-sec clearfix">
-                                <div class="themeSelect-selected">Select an issue</div>
-                                <i class="sd-icon sd-icon-expand-arrow themeSelect-arrow"></i>
-                            </div>
-                            <ul class="themeSelect-value hidden">
-                                <span class="arrow"></span>
-                                <li data-options="select1" data-default="true" class="themeSelect-active">Select an issue</li>
-                                <li data-options="select2" data-default="false">Wrong information</li>
-                                <li data-options="select3" data-default="false">Missing information</li>
-                                <li data-options="select4" data-default="false">MRP mismatch</li>
-                                <li data-options="select5" data-default="false">Image not matching the description</li>
-                                <li data-options="select6" data-default="false">Insufficient number of images</li>
-                            </ul>
-                        </div>
-                        <textarea rows="3" cols="" placeholder="Your Comments..." class="js-comment comment-box hidden"></textarea>
-                    </div>
-                    <button type="button" class="btn  btn-theme-secondary btn-line rfloat js-submit hidden">Submit</button>
-
-                </div>
-                <div class="feedback-msg hidden">
-                    <span class="check"><i class="sd-icon sd-icon-checkmark"></i></span>
-                    <span>Thank You for submitting your response.</span>
-                </div>
+        
+        <section class="item_details">
+          <div class="container">
+            <div class="row">
+                
             </div>
-        </section>-->
-
+          </div>
+        </section>
 
         <!-- Footer -->
         <footer class="footer_top">
