--- a/product_item.html
+++ b/product_item.html
@@ -359,12 +359,11 @@
                                 Donec sem lorem laoreet tempor un risus vitae, rutrum sodales nibh suspendisse est congue metus nunc, id viverra elit loreti rhoncus quis consecteur es. Donec pulvinar tempor lorem a pretium justo interdum.
                             </p>
                             <ul class="features">
-                                <li>4 GB RAM</li>
-                                <li>128 GB internal memory</li>
-                                <li>4 GB ram</li>
-                                <li> Free shipping with 4 days delivery</li>
-                                <li>3300 Mah</li>
-
+                                <li><p>4 GB RAM</p></li>
+                                <li><p>128 GB internal memory</p></li>
+                                <li><p>4 GB RAM</p></li>
+                                <li><p>Free shipping with 4 days delivery</p></li>
+                                <li><p>3300 Mah</p></li>
                             </ul>
                         </div>                       
                     </div>
