--- a/product_lists.html
+++ b/product_lists.html
@@ -9,12 +9,14 @@
         <link rel="stylesheet" href="css/owl.theme.default.min.css" />
         <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" /> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" />
+        <link rel="stylesheet" type="text/css" href="css/slick.css">
+        <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+        <link rel="stylesheet" href="css/jquery-ui.css" />      
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/product.css" />
         <link rel="stylesheet" href="css/product_detail.css" />
-        <link rel="stylesheet" type="text/css" href="css/slick.css">
-        <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
-        <link rel="stylesheet" href="css/jquery-ui.css" />         
+
+
         <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
         <script src="js/slick.js" type="text/javascript"></script>
         <script type="text/javascript">
@@ -363,8 +365,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 col-sm-4 col-xs-12 no_padding_left filters">
-                    <h2 class="mt100 clk">Shop by <a href="../icon/filter" class="filter_ico"><i class="icon-filter"></i></a></h2>
-                    <div class="accordion" id="accordionExample">
+                    <!--<h2 class="mt100 clk">Shop by <a href="../icon/filter" class="filter_ico"><i class="icon-filter"></i></a></h2>-->
+                    <div class="accordion mt100" id="accordionExample">
                         <a href="" class="pull-right clse">X</a>
                         <div class="card">
                             <div class="card-header" id="headingFour">
@@ -377,9 +379,9 @@
                             <div id="collapseOne" class="collapse in" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
-                                        <li> <input type="checkbox" id="fruit16" name="fruit-1" value="Apple"><label for="fruit16">Mobile Phones</label></li>
-                                        <li> <input type="checkbox" id="fruit18" name="fruit-1" value="Apple"><label for="fruit18">Mobile Phone Repair</label></li>
-                                        <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19">Mobile Phone Accessories</label></li>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">Mobile Phones<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">Mobile Case<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit14" name="fruit-1" value="Apple"><label for="fruit14">Accesories<span class="pull-right">(10)</span></label> </li>
                                         <li class="vwmre"> <a href="">View more category</a></li>
                                     </ul>
                                 </div>
@@ -544,9 +546,9 @@
                             <div class="col-md-9 col-xs-12">
                                 <h3 class="mt100"> Products by this seller (150)</h3>
                             </div>
-                            <div class="col-md-3 col-xs-12 mt100 sort">
+                            <div class="col-md-3 col-xs-12 mt40 sort">
                                 <div class="cust-selc pull-right">
-                                    <span class="grey">Sortby:</span>
+                                    <span class="grey">Sort by:</span>
 
                                     <select class="custom-select custom-select-lg mb-3 no-border">
                                         <option selected>Relevance</option>
@@ -919,7 +921,7 @@
 
                         <div class="well well-sm text-center mt25 grey_bg">
                             <span class="grey">
-                                Showing <span class="count">11-20</span> out of <span class="total_count">937</span> items
+                                Showing <span class="count">13-24</span> out of <span class="total_count">937</span> items
                             </span>
 
                         </div>
