--- a/shop_detail.html
+++ b/shop_detail.html
@@ -321,10 +321,10 @@
             <div class="container banr_link">
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-12 prd_link">
-                        <div class="col-md-5 col-sm-5 col-xs-12">
+                        <div class="col-md-5 col-sm-5 col-xs-12 shp_detl_dis">
                             <div class="tp_lnk"><a href="#">Flat 10% discount on Mobile Phones</a></div>
                         </div>
-                        <div class="col-md-7 col-sm-7 col-xs-12 pull-right border-left shp_detl_se_more">
+                        <div class="col-md-7 col-sm-7 col-xs-12 pull-right shp_detl_se_more">
                             <a href="#">See more products</a>
                             <span>
                                 <p class="shop_det_rat_spa">
