--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li class="active"><a href="shops.html">Products & shops</a></li>
+                                            <li><a href="shops.html">Products & shops</a></li>
                                             <li><a href="about_card.html">About SUDC card</a></li>
                                             <li><a href="membership.html">Membership</a></li>
 
