--- a/membership.html
+++ b/membership.html
@@ -69,9 +69,9 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li class="active"><a href="shops.html">Products & shops</a></li>
+                                            <li><a href="shops.html">Products & shops</a></li>
                                             <li><a href="about_card.html">About SUDC card</a></li>
-                                            <li><a href="membership.html">Membership</a></li>
+                                            <li class="active"><a href="membership.html">Membership</a></li>
 
                                             <li class="dropdown">
                                                 <a href="" class="dropdown-toggle excess_menu" id="othersubmenuhead" data-toggle="dropdown" data-hover="dropdown" role="button">
