--- a/shops.html
+++ b/shops.html
@@ -312,14 +312,18 @@
         <section class="teaser_shop">
             <div class="container">
                 <div class="row">
-                    <div class="jumbotron">Best Mobile Phone in T.Nagar , Bus Stand</div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="jumbotron">Best Mobile Phone in T.Nagar , Bus Stand</div>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="map_shop">
             <div class="container">
                 <div class="row">
-                    <img src="images/Map.jpg" class="img-responsive" alt="Responsive image">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img src="images/Map.jpg" class="img-responsive" alt="Responsive image">
+                    </div>
                 </div>
             </div>
         </section>
