--- a/product_lists.html
+++ b/product_lists.html
@@ -358,7 +358,9 @@
         </section>
         <div class="container">
             <div class="row">
-                <div class="jumbotron">Best Mobile Phone <span class="subtxt">(2035 order process)</span></div>
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="jumbotron">Best Mobile Phone <span class="subtxt">(2035 order process)</span></div>
+                </div>
             </div>
         </div>
 
