--- a/product_lists.html
+++ b/product_lists.html
@@ -548,7 +548,7 @@
                             <div class="col-md-9 col-xs-12">
                                 <h3 class="mt100"> Products by this seller (150)</h3>
                             </div>
-                            <div class="col-md-3 col-xs-12 mt40 sort">
+                            <div class="col-md-3 col-xs-12 mt40 sort no-padding">
                                 <div class="cust-selc pull-right">
                                     <span class="grey">Sort by:</span>
 
