--- a/product_lists.html
+++ b/product_lists.html
@@ -366,8 +366,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-4 col-xs-12 no_padding_left filters">
-                    <!--<h2 class="mt100 clk">Shop by <a href="../icon/filter" class="filter_ico"><i class="icon-filter"></i></a></h2>-->
+                <div class="col-md-2 col-sm-4 col-xs-12 no_padding_left filters product_list_filter">
+                    <h2 class="mt100 clk" style="display:none;">Shop by <a href="javascript:void(0);" onclick="openFilter();" class="filter_ico"><i class="icon-filter"></i></a></h2>
                     <div class="accordion mt100" id="accordionExample">
                         <a href="" class="pull-right clse">X</a>
                         <div class="card">
