--- a/shops.html
+++ b/shops.html
@@ -330,7 +330,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 col-sm-4 col-xs-12 no_padding_left filters">
-                    <h2 class="mt100 clk">Shop by <a href="../icon/filter" class="filter_ico"><i class="icon-filter"></i></a></h2>
+                    <h2 class="mt100 clk">Shop by <a href="javascript:openFilter();" class="filter_ico"><i class="icon-filter"></i></a></h2>
                     <div class="accordion" id="accordionExample">
                         <a href="" class="pull-right clse">X</a>
                         <div class="card">
