--- a/shops.html
+++ b/shops.html
@@ -332,7 +332,7 @@
                 <div class="col-md-2 col-sm-4 col-xs-12 no_padding_left filters">
                     <h2 class="mt100 clk">Shop by <a href="javascript:openFilter();" class="filter_ico"><i class="icon-filter"></i></a></h2>
                     <div class="accordion" id="accordionExample">
-                        <a href="" class="pull-right clse">X</a>
+                        <a href="" class="pull-right clse"><i class="far fa-times-circle"></i></a>
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
