--- a/product_detail.html
+++ b/product_detail.html
@@ -370,13 +370,175 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="item_details">
-          <div class="container">
-            <div class="row">
-                
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <ul class="list-inline pdt_det_head">
+                            <li class="active"><a href="#item_detail">ITEM DETAILS</a></li>
+                            <li><a href="ratings">RATINGS & REVIEWS</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="heighligts">
+                            <div class="heighligts-header border_dotted-bottom">
+                                <h2>
+                                    <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#heighligts">
+                                        Highlights
+                                    </a>
+                                </h2>
+                            </div>
+                            <div id="heighligts" class="collapse in">
+                                <div class="heighligts-body">
+                                    <ul class="list">
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+                                            <span class="h-content">RAM:1 GB</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+
+                                            <span class="h-content">Screen Size (in cm):12.7 cm (5)</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+
+                                            <span class="h-content">Rear Camera:5 MP</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+
+                                            <span class="h-content">Front Camera:5 MP</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+
+                                            <span class="h-content">Internal Memory:16GB</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8">
+
+                                            <span class="h-content">Battery Capacity (in mAh):4000</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+
+                                            <span class="h-content">Processor Cores:Quad</span>
+                                        </li>
+                                        <li class="list-item col-md-4 col-sm-6 col-xs-8 ">
+                                            <span class="h-content">SUPC: SDL535061956</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <!--Specification-->
+                        <div class="specification">
+                            <div class="specification-header border_dotted-bottom">
+                                <h2>
+                                    <a class="btn-det_link" type="button" data-toggle="collapse" data-target="#specification">
+                                        Specification
+                                    </a>
+                                </h2>
+                            </div>
+                            <div id="specification" class="collapse in">
+                                <div class="specification-body">
+
+                                    <h2 class="spec_heading">Box contents</h2>
+                                    <ul class="">
+                                        <li class="">
+                                            <span class="left_spec">In the box</span>
+                                            <span class="right_spec">Handset Battery (In-built) Screen Guard Others: USB Cable, Adapter, Earphone, User Manual</span>
+                                        </li>
+                                        <li class="">
+                                            <span class="left_spec">Memory</span>
+                                            <span class="right_spec">128 GB</span>
+                                        </li>
+                                    </ul>
+
+                                    <h2 class="spec_heading">Warranty</h2>
+                                    <ul>
+                                        <li>
+                                            <span class="left_spec">Warranty Period</span>
+                                            <span class="right_spec">12 Months Brand Warranty</span>
+                                        </li>
+                                    </ul>
+
+                                    <h2 class="spec_heading">General</h2>
+                                    <ul>
+                                        <li>
+                                            <span class="left_spec">Brand</span>
+                                            <span class="right_spec">Intex</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Model</span>
+                                            <span class="right_spec">Intex Aqua Power IV</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Form</span>
+                                            <span class="right_spec">Smartphones</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Colour</span>
+                                            <span class="right_spec">Black</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Call Features</span>
+                                            <span class="right_spec">Call Forwarding/Call Waiting/Loudspeaker</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">SIMs</span>
+                                            <span class="right_spec">Dual</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">SIM Size</span>
+                                            <span class="right_spec">Micro,Nano</span>
+                                        </li>
+                                    </ul>
+
+                                    <h2 class="spec_heading">Display</h2>
+                                    <ul>
+                                        <li>
+                                            <span class="left_spec">Screen Size (in cm)</span>
+                                            <span class="right_spec">12.7 cm (5)</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Display Resolution</span>
+                                            <span class="right_spec">854x480 (FWVGA)</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Display Type</span>
+                                            <span class="right_spec">LED</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Multitouch</span>
+                                            <span class="right_spec">Yes</span>
+                                        </li>
+                                    </ul>
+
+                                    <h2 class="spec_heading">Camera</h2>
+                                    <ul>
+                                        <li>
+                                            <span class="left_spec">Rear Camera</span>
+                                            <span class="right_spec">12 MP</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Front Camera</span>
+                                            <span class="right_spec">8 MP</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Flash</span>
+                                            <span class="right_spec">LED</span>
+                                        </li>
+                                        <li>
+                                            <span class="left_spec">Auto Focus</span>
+                                            <span class="right_spec">Yes</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-          </div>
         </section>
 
         <!-- Footer -->
@@ -457,9 +619,9 @@
         </footer>
         <div class="upar"></div>
         <script>
-          $(".detail_img").click(function(){
-              $(".detail_big_img").attr("src", $(this).attr("src").replace("thumbnail_", ""));
-          });
+            $(".detail_img").click(function(){
+                $(".detail_big_img").attr("src", $(this).attr("src").replace("thumbnail_", ""));
+            });
         </script>
     </body>
 </html>
