--- a/shops.html
+++ b/shops.html
@@ -97,7 +97,7 @@
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="othersubmenuhead">
                                                     <li><a href="product_lists.html">Product list</a></li>
                                                     <li><a  href="shop_detail.html">Shop details</a></li>
-                                                    <li><a href="product_item.html">Product item</a></li>
+                                                    <li><a href="product_detail.html">Product item</a></li>
                                                 </ul>
                                             </li>
 
